minor fixes & projects api

--- a/components/Landing/Landing.module.scss
+++ b/components/Landing/Landing.module.scss
@@ -9,6 +9,7 @@
 
 .proffesion {
   font-size: 5rem;
+  font-weight: 400;
   background: radial-gradient(
       88.02% 6604.08% at 114.33% 129.66%,
       #7b198c 0%,
