--- a/styles/variables/_fonts.scss
+++ b/styles/variables/_fonts.scss
@@ -4,4 +4,5 @@ $font-header-icon: 1.6rem;
 $font-header-mobile: 0.8rem;
 $font-project: 1.4rem;
 $font-project-mobile: 1.1rem;
+$font-project-stack: 1.3rem;
 $font-about: 1.9rem;
