--- a/components/Projects/Projects.module.scss
+++ b/components/Projects/Projects.module.scss
@@ -2,12 +2,20 @@
 
 .projects {
   min-height: 100vh;
-  width: 80%;
-  margin: 0 auto;
+  width: 100%;
   position: relative;
 }
 
 .header {
   font-size: $font-header;
   font-weight: 400;
+  width: 80%;
+  margin: 0 auto;
+  margin-bottom: 40px;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
