--- a/components/Projects/Projects.module.scss
+++ b/components/Projects/Projects.module.scss
@@ -1,7 +1,6 @@
 @use '../../styles/variables' as *;
 
 .projects {
-  min-height: 100vh;
   width: 100%;
   position: relative;
 }
@@ -18,4 +17,34 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  z-index: 10000;
+  position: relative;
+}
+
+.link {
+  display: inline-block;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  margin: 60px 0;
+  font-size: $font-project;
+  font-weight: 300;
+  text-decoration: underline;
+  transition: text-shadow 0.15s;
+
+  &:hover {
+    text-shadow: 0 0 20px #fff;
+  }
+}
+
+.blur {
+  position: absolute;
+  left: 55%;
+  top: 50%;
+  height: 700px;
+  width: 900px;
+  transform: translate(-50%, -50%) rotate(30deg);
+  background-color: rgba(30, 158, 66, 0.55);
+  border-radius: 100%;
+  filter: blur(160px);
 }
