--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -8,6 +8,7 @@ body {
   font-family: 'Roboto Mono', monospace;
   background-color: $bg-main;
   overflow-x: hidden;
+  position: relative;
 }
 
 html {
