--- a/components/About/About.module.scss
+++ b/components/About/About.module.scss
@@ -5,12 +5,13 @@
   background-color: $bg-about;
   padding: 20px;
   border-radius: 20px;
+  z-index: 10000;
 }
 
 .header {
   font-size: $font-header;
   font-weight: 400;
-  margin-bottom: 20px;
+  margin-bottom: 60px;
 }
 
 .text {
