--- a/components/Layout/Footer.module.scss
+++ b/components/Layout/Footer.module.scss
@@ -1,7 +1,7 @@
 @use '../../styles/variables/' as *;
 
 .footer {
-  margin: 60px 0;
+  margin: 60px 0 20px 0;
   text-align: center;
   font-size: $font-project;
   font-weight: 300;
