--- a/styles/variables/_fonts.scss
+++ b/styles/variables/_fonts.scss
@@ -1,7 +1,10 @@
 $font-header: 2rem;
-$font-header-link: 1.4rem;
-$font-header-icon: 1.6rem;
+$font-header-tablet: 1.5rem;
 $font-header-mobile: 0.8rem;
+$font-header-link: 1.4rem;
+$font-header-link-tablet: 1.1rem;
+$font-header-icon: 1.6rem;
+$font-header-icon-tablet: 1.3rem;
 $font-project: 1.4rem;
 $font-project-mobile: 1.1rem;
 $font-project-stack: 1.3rem;
