--- a/components/Projects/Project.module.scss
+++ b/components/Projects/Project.module.scss
@@ -1,4 +1,5 @@
 @use '../../styles/variables' as *;
+@use '../../styles/mixins/viewports' as *;
 
 .project {
   width: 90%;
@@ -16,6 +17,10 @@
   flex-direction: column;
   justify-content: space-between;
   gap: 40px;
+
+  @include tabletL {
+    width: 50%;
+  }
 }
 
 .header {
@@ -32,6 +37,10 @@
 .name {
   font-size: $font-header;
   font-weight: 400;
+
+  @include tablet {
+    font-size: $font-header-tablet;
+  }
 }
 
 .time {
@@ -49,6 +58,10 @@
   &:hover {
     text-shadow: 0 0 15px #fff;
   }
+
+  @include tablet {
+    font-size: $font-project-mobile;
+  }
 }
 
 .text {
@@ -58,6 +71,14 @@
   &:nth-of-type(3) {
     font-size: $font-project-stack;
     color: $font-color-stack;
+
+    @include tablet {
+      font-size: $font-project-mobile;
+    }
+  }
+
+  @include tablet {
+    font-size: $font-project-mobile;
   }
 }
 
@@ -65,6 +86,10 @@
   width: 40%;
   height: auto;
   border-radius: 20px;
+
+  @include tabletL {
+    width: 50%;
+  }
 }
 
 .imageContainer > span {
