--- a/components/About/About.module.scss
+++ b/components/About/About.module.scss
@@ -1,4 +1,5 @@
 @use '../../styles/variables' as *;
+@use '../../styles/mixins/viewports' as *;
 
 .about {
   width: 60%;
@@ -6,15 +7,28 @@
   padding: 20px;
   border-radius: 20px;
   z-index: 10000;
+
+  @include mobileL {
+    width: 100%;
+  }
 }
 
 .header {
   font-size: $font-header;
   font-weight: 400;
   margin-bottom: 60px;
+
+  @include mobileL {
+    font-size: $font-header-tablet;
+    margin-bottom: 30px;
+  }
 }
 
 .text {
   font-weight: 300;
   font-size: $font-about;
+
+  @include mobileL {
+    font-size: $font-about-mobile;
+  }
 }
