--- a/components/Projects/Projects.module.scss
+++ b/components/Projects/Projects.module.scss
@@ -1,4 +1,5 @@
 @use '../../styles/variables' as *;
+@use '../../styles/mixins/viewports' as *;
 
 .projects {
   width: 100%;
@@ -11,6 +12,10 @@
   width: 80%;
   margin: 0 auto;
   margin-bottom: 40px;
+
+  @include mobileL {
+    font-size: $font-header-tablet;
+  }
 }
 
 .container {
