--- a/components/Skills/Skills.module.scss
+++ b/components/Skills/Skills.module.scss
@@ -1,4 +1,5 @@
 @use '../../styles/variables' as *;
+@use '../../styles/mixins/viewports' as *;
 
 .skills {
   height: auto;
@@ -7,12 +8,20 @@
   padding: 20px;
   border-radius: 20px;
   z-index: 10000;
+
+  @include mobileL {
+    width: 100%;
+  }
 }
 
 .header {
   font-size: $font-header;
   font-weight: 400;
   margin-bottom: 60px;
+
+  @include mobileL {
+    margin-bottom: 30px;
+  }
 }
 
 .container {
