--- a/styles/variables/_colors.scss
+++ b/styles/variables/_colors.scss
@@ -2,5 +2,5 @@ $bg-main: #091e3d;
 $bg-project: rgba(38, 26, 113, 0.3);
 $bg-about: rgb(134, 60, 169, 0.3);
 $font-color-main: #fff;
-$font-color-link: #2d61af;
+$font-color-link: #1555b4;
 $font-color-stack: rgb(122, 157, 255);
