--- a/styles/variables/_fonts.scss
+++ b/styles/variables/_fonts.scss
@@ -1,6 +1,6 @@
 $font-header: 2rem;
 $font-header-tablet: 1.5rem;
-$font-header-mobile: 0.8rem;
+$font-header-mobile: 1.3rem;
 $font-header-link: 1.4rem;
 $font-header-link-tablet: 1.1rem;
 $font-header-icon: 1.6rem;
@@ -9,3 +9,4 @@ $font-project: 1.4rem;
 $font-project-mobile: 1.1rem;
 $font-project-stack: 1.3rem;
 $font-about: 1.4rem;
+$font-about-mobile: 1.1rem;
