--- a/styles/mixins/_viewports.scss
+++ b/styles/mixins/_viewports.scss
@@ -21,3 +21,15 @@
     @content;
   }
 }
+
+@mixin mobile {
+  @media screen and (max-width: 650px) {
+    @content;
+  }
+}
+
+@mixin mobileS {
+  @media screen and (max-width: 450px) {
+    @content;
+  }
+}
