--- a/components/Layout/Footer.module.scss
+++ b/components/Layout/Footer.module.scss
@@ -1,8 +1,13 @@
 @use '../../styles/variables/' as *;
+@use '../../styles/mixins/viewports' as *;
 
 .footer {
   margin: 60px 0 20px 0;
   text-align: center;
   font-size: $font-project;
   font-weight: 300;
+
+  @include mobileS {
+    font-size: $font-project-mobile;
+  }
 }
