--- a/components/Layout/MobileMenu.module.scss
+++ b/components/Layout/MobileMenu.module.scss
@@ -20,6 +20,10 @@
   @include mobileM {
     display: flex;
   }
+
+  @include mobileS {
+    right: 20px;
+  }
 }
 
 .hamburger {
@@ -70,10 +74,12 @@
   transition: 0.2s;
   left: -100px;
   position: relative;
+  pointer-events: none;
 
   &.open {
     opacity: 1;
     left: 0;
+    pointer-events: all;
   }
 
   &.open:nth-of-type(1) {
