--- a/components/Projects/Project.module.scss
+++ b/components/Projects/Project.module.scss
@@ -13,6 +13,10 @@
   @include mobileL {
     gap: 20px;
   }
+
+  @include mobileM {
+    flex-direction: column;
+  }
 }
 
 .textContainer {
@@ -24,6 +28,10 @@
 
   @include tabletL {
     width: 50%;
+  }
+
+  @include mobileM {
+    width: 100%;
   }
 }
 
@@ -54,6 +62,10 @@
 .time {
   font-weight: 300;
   margin-left: 20px;
+
+  @include mobileS {
+    display: none;
+  }
 }
 
 .link {
@@ -69,6 +81,10 @@
 
   @include tablet {
     font-size: $font-project-mobile;
+  }
+
+  @include mobileS {
+    margin-left: 20px;
   }
 }
 
@@ -97,6 +113,10 @@
 
   @include tabletL {
     width: 50%;
+  }
+
+  @include mobileM {
+    width: 100%;
   }
 }
 
